# cv-parser

./: .gitignore  README.md  pyproject.toml
cv/: O'Reilly_CV_25-26.docx
notebooks/: batch_cv_parser.ipynb
output/: O'Reilly_CV_25-26.json  combined copy 2-25.csv  combined copy 2-27_0850.csv  combined copy 2-27_0858.csv  combined copy 2-27_0905.csv  combined copy 2-27_1200.csv  combined copy.csv  combined.csv  deHaan_CV_25-26 copy - og file.csv  deHaan_CV_25-26 copy - og file2.csv  deHaan_CV_25-26 copy - pre-extracted.csv  deHaan_CV_25-26.csv  deHaan_CV_25-26.json  parsed_deHaan_CV_25-26_2026-02-27_20_16_05.csv  parsed_dehaan.csv  parsed_dehaan_2026-02-27_1500.csv
src/cv_parser/: __init__.py  __main__.py  combiner.py  config.py  consolidate.py  export.py  extract_text.py  jobs.py  line_parser.py  parser.py  prompts.py  schemas.py
src/cv_parser/cli/: display.py  file_browser.py  interactive.py
src/cv_parser/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
tests/: test_combiner.py  test_config.py  test_consolidate.py  test_export.py  test_extract_text.py  test_jobs.py  test_parser.py  test_providers.py  test_schemas.py
