[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cv-parser"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "questionary>=2.0",
    "rich>=13.0",
    "openai>=1.0",
    "google-generativeai>=0.8.6",
    "pypdf>=5.0",
    "python-docx>=1.0",
    "ipykernel>=7.2.0",
    "papermill>=2.7.0",
    "nbconvert>=7.17.0",
    "nltk>=3.8",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18"]
gemini = ["google-generativeai>=0.8", "python-docx>=1.0"]
extract = ["pdfplumber>=0.11", "scikit-learn>=1.0", "nltk>=3.8"]
fzf = ["pyfzf>=0.3"]
dev = ["pytest>=8.0"]

[project.scripts]
"cv-parser" = "cv_parser.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_parser"]

[tool.hatch.build.targets.sdist]
include = ["src/cv_parser"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
