[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cv-parser"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
    "pypdf>=5.0",
    "pdfplumber>=0.11",
    "python-docx>=1.0",
    "nltk>=3.8",
    "ipykernel>=7.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/cv_parser"]

[tool.hatch.build.targets.sdist]
include = ["src/cv_parser"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
